objects/myV2MOM__V2MOM__c.object
<CustomObject>
    <fields>
        <fullName>myV2MOM__FY_Year__c</fullName>
        <label>FY Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Published_Date__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myV2MOM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>V2MOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Values__c</fullName>
        <label>Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Vision__c</fullName>
        <label>Vision</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>V2MOM</label>
    <listViews>
        <fullName>myV2MOM__All</fullName>
        <columns>NAME</columns>
        <columns>myV2MOM__Status__c</columns>
        <columns>myV2MOM__FY_Year__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>myV2MOM__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>V2MOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>V2MOM</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>